syntax = "proto3";

option go_package = "github.com/mikeewhite/ports-service";

package ports_service.v1;

service PortsService {
  rpc AddPorts (AddPortsRequest) returns (AddPortsResponse) {}
  rpc ListPorts (ListPortsRequest) returns (ListPortsResponse) {}
}

message AddPortsRequest {
  repeated Port ports = 1;
}

message AddPortsResponse {}

message ListPortsRequest {}

message ListPortsResponse {
  repeated Port ports = 1;
}

message Port {
  string id = 1;
  string name = 2;
  string city = 3;
  string country = 4;
  repeated string alias = 5;
  repeated string regions = 6;
  repeated float coordinates = 7;
  string province = 8;
  string timezone = 9;
  repeated string unlocs = 10;
  string code = 11;
}

